--- a/pet-clinic-web/src/main/resources/templates/login.html
+++ b/pet-clinic-web/src/main/resources/templates/login.html
@@ -57,7 +57,7 @@
                                 <br/>
                                 <br/>
                                 <br/>
-                                <a class="nav-link  pull-left" type="text" th:href="@{/owners/new}">
+                                <a class="nav-link  pull-left" type="text" th:href="@{/new}">
                                     New Account
                                 </a>
                                 <input class="btn_1 d-none d-md-inline-block nav-link pull-right" type="submit"
