--- a/pet-clinic-web/src/main/resources/templates/owner/findOwners.html
+++ b/pet-clinic-web/src/main/resources/templates/owner/findOwners.html
@@ -31,7 +31,7 @@
                     <button type="submit" class="btn-dark">Find Owner</button>
                 </div>
                 <div class="col-4">
-                    <a class="btn" th:href="@{/owners/new}">Add Owner</a></div>
+                    <a class="btn" th:href="@{/new}">Add Owner</a></div>
             </div>
         </form>
     </div>
